# fannie-mae-ci-cd-jenkins

./: .env.sample  .gitignore  Dockerfile  Jenkinsfile  LICENSE  Makefile  README.md  entrypoint.sh  environment.yml  pyproject.toml
_presentation/: package-lock.json  slides.md
fannie_mae_ci_cd_jenkins/: __init__.py  dataset.py  features.py  plots.py
fannie_mae_ci_cd_jenkins/modeling/: predict.py  train.py
tests/: test_smoke.py
