[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fannie_mae_ci_cd_jenkins"
version = "0.0.1"
description = "A project to demo data sws in a Jenkins CI/CD environment with Anaconda PSM"
authors = [
  { name = "Birdcar" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["fannie_mae_ci_cd_jenkins"]
include = ["pyproject.toml", "fannie_mae_ci_cd_jenkins/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["fannie_mae_ci_cd_jenkins"]
force-sort-within-sections = true

